@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-26T01:40:06Z",
-  "count_outdated" : 117,
-  "uniques_outdated" : 80,
+  "timestamp" : "2022-04-27T08:21:37Z",
+  "count_outdated" : 126,
+  "uniques_outdated" : 87,
   "count" : 146,
   "uniques" : 99,
   "clones" : [
-    {
-      "timestamp": "2022-04-13T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 0, 9 ],
-      "uniques": 7,
-      "uniques_minmax": [ 0, 7 ]
-    },
     {
       "timestamp": "2022-04-15T00:00:00Z",
       "count": 4,
