@@ -1,12 +1,7 @@
 {
-  "count": 29,
-  "uniques": 12,
+  "count": 20,
+  "uniques": 9,
   "clones": [
-    {
-      "timestamp": "2022-04-13T00:00:00Z",
-      "count": 9,
-      "uniques": 7
-    },
     {
       "timestamp": "2022-04-15T00:00:00Z",
       "count": 4,
